<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="9dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/secondary_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginVertical="15dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:id="@+id/paytm"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:src="@drawable/paytm"
                android:contentDescription="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/paytm"
                    app:layout_constraintBottom_toBottomOf="@+id/paytm">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arimo_medium"
                        android:textSize="10sp"
                        android:textColor="#C1BBBB"
                        android:text="@string/sat_16th_dec_2023_22_30_00_ist"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arimo_medium"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:text="@string/india_tour_of_south_africa_2023_24"/>




                </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/paytm">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/india"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/india"
                        android:textColor="@color/white"
                        android:fontFamily="@font/arimo_medium"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_14_5_over"
                        android:textColor="@color/text_color_2"
                        android:fontFamily="@font/arimo_medium"
                        android:textSize="10sp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/africa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/south_africa"
                        android:textColor="@color/white"
                        android:fontFamily="@font/arimo_medium"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_over"
                        android:layout_gravity="end"
                        android:textColor="@color/text_color_2"
                        android:fontFamily="@font/arimo_medium"
                        android:textSize="10sp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:background="@drawable/card_country_bg">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_165_6"
                            android:textColor="#128807"
                            android:fontFamily="@font/arimosemibold"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginVertical="5dp"/>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:cardCornerRadius="100dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ind"/>
                        </androidx.cardview.widget.CardView>


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:background="@drawable/card_country_bg">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:cardCornerRadius="100dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ind"/>
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_165_6"
                            android:textColor="#DE3831"
                            android:fontFamily="@font/arimosemibold"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginVertical="5dp"/>


                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>




            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:background="#7CF3F3EF"
                app:layout_constraintTop_toBottomOf="@+id/mid_layout"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                app:layout_constraintTop_toBottomOf="@+id/line">
                
                
                <ImageView
                    android:id="@+id/poster_image"
                    android:layout_width="55dp"
                    android:layout_height="33dp"
                    android:src="@drawable/poster_image"
                    android:contentDescription="@null"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_text"
                    android:textSize="11sp"
                    android:layout_marginStart="7dp"
                    android:textColor="#C1BBBB"
                    android:lineHeight="15sp"
                    android:fontFamily="@font/arimo_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/poster_image"
                    app:layout_constraintTop_toTopOf="@+id/poster_image"
                    app:layout_constraintBottom_toBottomOf="@+id/poster_image"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            


        </androidx.constraintlayout.widget.ConstraintLayout>
        
        
        

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>